# catch-or-dodge

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ball.cpp  ball.h  entity.h  game.h  leaderboard.cpp  leaderboard.h  life_bar.h  main.cpp  player.cpp  player.h  scene.h  stage.cpp  stage.h  text.cpp  text.h
entities/: ball.cpp  ball.h  bomb.cpp  bomb.h  player.cpp  player.h
scenes/: game_over_scene.cpp  game_over_scene.h  leaderboard_scene.cpp  leaderboard_scene.h  menu_scene.cpp  menu_scene.h  play_scene.cpp  play_scene.h
service/app/: __init__.py  routes.py
service/app/models/: record.py
service/migrations/versions/: b8b2c9f25f59_adds_record_model.py
ui/: table.cpp  table.h  text.cpp  text.h
